# McSTools

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: splashscreen.html
src-tauri/data/resource/minecraft/: config.json
src-tauri/schematic/: test.mcstructure
src-tauri/src/: lib.rs  main.rs
src-tauri/src/be_schematic/: be_schematic.rs  mod.rs  to_be_schematic.rs
src-tauri/src/be_schematic/le_reader/: be_schematic.rs  mod.rs  read_nbt_le.rs  to_be_schematic.rs  write_nbt_le.rs
src-tauri/src/building_gadges/: bg_schematic.rs
src-tauri/src/create/: create_schematic.rs  to_create_schematic.rs
src-tauri/src/data_files/: config.rs  data_flies.rs  files.rs
src-tauri/src/database/: db_control.rs  db_data.rs
src-tauri/src/database/db_apis/: logs_api.rs  schematics_api.rs  user_api.rs
src-tauri/src/litematica/: lm_schematic.rs  lm_schematic_data.rs  to_lm_schematic.rs
src-tauri/src/modules/: convert.rs  map_art.rs  replace.rs  schematic.rs
src-tauri/src/modules/modules_data/: convert_data.rs
src-tauri/src/split_schematic/: split_schematic.rs
src-tauri/src/utils/: entities.rs  loading.rs  mod.rs  schematic_data.rs  tile_entities.rs
src-tauri/src/utils/minecraft_data/: je_blocks_data.rs  map_art_data.rs  versions_data.rs
src-tauri/src/word_edit/: to_we_schematic.rs  we_schematic.rs  we_schematic_data.rs
src/i18n/: en.ts  index.ts  ja.ts  zh_cn.ts  zh_tw.ts
src/modules/: copy_file.ts  deepslateInit.ts  others.ts  resource_manager.ts  schematics_data.ts  snbt_to_json.ts  split_data.ts  theme.ts  threeD_data.ts  toolsData_data.ts  update_schematic.ts  uploadImage.ts  user_data.ts
(+26 files in other folders)
